# LearningToolRS

./: .gitignore  Cargo.toml  LICENSE  README.adoc  rustfmt.toml
.github/workflows/: rust-main.yml  rust-pr.yml  rust-release.yml
data/: millionaire-1.0.0.xml  sample-1.0.0.xml
src/: cli_args.rs  cliargs.rs  error.rs  lib.rs  main.rs  module_browser.rs  module_browser_test.rs  ui.rs
src/ui/: mod.rs  module_browser.rs
