[package]
name = "LearningToolRS"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.5.2", package = "gtk4" }

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
#rev = "4c1db68"
rev = "e46521d"
dependencies = ["pkgconf"]

