[package]
name = "learning-tool-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tui = "0.19.0"
tracing = "0.1"
tracing-subscriber = "0.3"
structopt = "0.3.26"
rustfmt = "0.10.0"
xml-rs = "0.8.4"
text_io = "0.1.12"
serde = "1.0.148"
serde-xml-rs = "0.6.0"
scan_fmt = "0.2.6"
matches = "0.1.9"
